# homework_09_09

./: LICENSE  README.md  main.py  pyproject.toml
Scr/: processing.py
